--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -9,6 +9,7 @@
 @import "estilos-principales/header";
 @import "estilos-principales/footer";
 @import "estilos-principales/media-queries";
+@import "estilos-principales/imagehover";
 
 /*Estilos Paginas*/
 @import "estilos-paginas/inicio";
