--- a/sass/variables/_variables.scss
+++ b/sass/variables/_variables.scss
@@ -14,3 +14,14 @@ $color-iconos: #818e64;
 $letra-productos: "Wittgenstein", serif;
 $letra-secciones: "Playfair Display", serif;
 $letra-cards: "Raleway", sans-serif;
+
+/*ImageHover*/
+$image-bg: #8d9f8750;
+$figcaption-bg: #818e6440;
+$figcaption-padding: 30px;
+$text-color: #ffffff;
+$border-color: #ffffff;
+$border-margin: 5px;
+$border-width: 4px;
+$transition-duration: 0.35s;
+$shift-distance: 10px;
