--- a/sass/estilos-paginas/_inicio.scss
+++ b/sass/estilos-paginas/_inicio.scss
@@ -1,11 +1,26 @@
 /*INICIO BODY*/
 
-.carousel-container  {
+/*.carousel-container  {
     max-width: 50vh;
+}*/
+
+.main__Index{
+    width: 100vw;
+    background-color: #f3a18360;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-areas: "a b c";
+}
+
+.main__Index-a{
+    grid-area: a;
+    height: 50vh;
+    filter: blur(8px);
 }
 
 #carouselExampleIndicators{
-    width: 100vw;
+    width: 100%;
+    grid-area: b;
     display: flex;
     justify-content: center;
     background-color: $color-carousel;
@@ -14,4 +29,13 @@
 
 .carousel-control-prev-icon, .carousel-control-next-icon {
     filter: invert(108%);
-  }
+}
+
+/*.carousel-item{
+    width: 100%;
+    height: 40vh;
+}*/
+
+.main__Index-c{
+    grid-area: c;
+}
