--- a/sass/estilos-principales/_media-queries.scss
+++ b/sass/estilos-principales/_media-queries.scss
@@ -1,6 +1,6 @@
 @media (min-width: 350px) and (max-width: 767px) {
     .iconoRedes{
-        font-size: 16px;
+        font-size: 20px;
         color: $color-iconos;
     }
     .logoFooter{
@@ -17,6 +17,18 @@
         display: flex;
         justify-content: center;
     }   
+
+    .main__Index{
+        display: block!important;
+    }
+
+    .main__Index-a{
+        display: none;
+    }
+
+    .main__Index-c{
+        display: none;
+    }
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
