--- a/css/estilos.css
+++ b/css/estilos.css
@@ -203,22 +203,31 @@
     max-width: 50vh;
 }*/
 .main__Index {
-  width: 100vw;
-  background-color: rgba(243, 161, 131, 0.3764705882);
+  width: 100%;
+  /*background-color: #f3a18360;*/
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-areas: "a b c";
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-areas: "a b c d";
 }
 
 .main__Index-a {
   grid-area: a;
-  height: 50vh;
-  filter: blur(8px);
+  /*height: 50vh;*/
+  /*display: flex;
+  justify-content: center;
+  align-items: center;*/
+  background-color: #006062;
 }
 
+/*.main__Index-a:hover{
+    transition: filter 2.5s ease-in;
+    background-color: $color-secundario;
+    background-position: center;
+
+}*/
 #carouselExampleIndicators {
   width: 100%;
-  grid-area: b;
+  grid-area: c;
   display: flex;
   justify-content: center;
   background-color: rgba(242, 161, 134, 0.062745098);
@@ -232,8 +241,24 @@
     width: 100%;
     height: 40vh;
 }*/
-.main__Index-c {
-  grid-area: c;
+.main__Index-b {
+  grid-area: b;
+  background-color: #006769;
+}
+
+.main__Index-b:hover {
+  background-image: url(../../imagenes/Carousel2cv.jpg);
+  background-size: cover;
+}
+
+.main__Index-d {
+  grid-area: d;
+  background-color: #009597;
+}
+
+.main__Index-d:hover {
+  background-image: url(../../imagenes/Carousel1cv.jpg);
+  background-size: contain;
 }
 
 /*Paginas/Quienes Somos*/
@@ -269,6 +294,7 @@
 
 .productos__container-encabezado {
   font-family: "Wittgenstein", serif;
+  text-shadow: 2px 2px 5px #8d9f87;
   display: flex;
   justify-content: center;
 }
@@ -341,13 +367,16 @@
   padding-bottom: 20px;
   padding-left: 20px;
 }
-.ferias__container-encabezado h1 {
+
+h1 {
   margin-bottom: 0;
   text-shadow: 5px 5px 10px #818e64;
 }
 
 .ferias__fondo {
   background-color: rgba(141, 159, 135, 0.3137254902);
+  margin-right: 0;
+  margin-left: 0;
 }
 
 /*Paginas/Contacto*/
