--- a/sass/estilos-paginas/_Ferias.scss
+++ b/sass/estilos-paginas/_Ferias.scss
@@ -5,12 +5,21 @@
     padding-top: 20px;
     padding-bottom: 20px;
     padding-left: 20px;
+    
+    
+  }
     h1{
         margin-bottom: 0;
         text-shadow: 5px 5px 10px $color-iconos;
-    }   
-}
+        
+    }
+
 
 .ferias__fondo{
     background-color:$color-terciario-light;
+    margin-right: 0;
+    margin-left: 0;
 }
+
+
+ 
