modificacion ruta de acceso sass a imagenes hover index

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -247,7 +247,7 @@
 }
 
 .main__Index-b:hover {
-  background-image: url(../../imagenes/Carousel2cv.jpg);
+  background-image: url(../imagenes/Carousel2cv.jpg);
   background-size: cover;
 }
 
@@ -257,7 +257,7 @@
 }
 
 .main__Index-d:hover {
-  background-image: url(../../imagenes/Carousel1cv.jpg);
+  background-image: url(../imagenes/Carousel1cv.jpg);
   background-size: contain;
 }
 
