--- a/sass/estilos-paginas/_inicio.scss
+++ b/sass/estilos-paginas/_inicio.scss
@@ -53,7 +53,7 @@
 }
 
 .main__Index-b:hover{
-    background-image: url(../../imagenes/Carousel2cv.jpg);
+    background-image: url(../imagenes/Carousel2cv.jpg);
     background-size: cover;
 }   
 
@@ -64,6 +64,6 @@
 }
 
 .main__Index-d:hover{
-    background-image: url(../../imagenes/Carousel1cv.jpg);
+    background-image: url(../imagenes/Carousel1cv.jpg);
     background-size: contain;
 }
